--- a/assets/style/lessons.css
+++ b/assets/style/lessons.css
@@ -1,227 +1,264 @@
 @media screen and (min-width: 601px) {
-.lessons {
-    display: grid;
-    grid-template-columns: 60% 40%;
-    grid-template-rows: 20% 80%;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 600;
-    text-align: center;
+    .lessons {
+        display: grid;
+        grid-template-columns: 60% 40%;
+        grid-template-rows: 20% 80%;
+        font-family: 'Raleway', sans-serif;
+        font-weight: 600;
+        text-align: center;
+    }
+
+    .lessons__h2 {
+        width: 40vw;
+        margin-left: 30vw;
+        margin-bottom: 0;
+        padding-top: 1vh;
+        font-family: 'Raleway', sans-serif;
+        font-weight: 600;
+        font-size: 55px;
+        color: white;
+        text-align: center;
+        background-color: #2FC97F;
+        border-radius: 50px;
+        color: white;
+
+    }
+
+    .lessons_img {
+        display: grid;
+        grid-column: 1/2;
+        grid-row: 2/3;
+        background-image: url(../images/lessons/lessons_fon.png);
+        background-repeat: no-repeat;
+        background-size: 82%;
+        background-position-x: 88%;
+        background-position-y: 83%;
+
+    }
+
+    .lessons_img img {
+        display: grid;
+        align-items: flex-start;
+        width: 55vw;
+        height: 62vh;
+        padding: 7%;
+        margin-left: 8%;
+
+    }
+
+    .lessons_text {
+        display: grid;
+        grid-column: 2/3;
+        grid-row: 2/3;
+        text-decoration: none;
+        margin-top: 7%;
+        margin-left: 5vw;
+    }
+
+    .lessons_text ul {
+        display: grid;
+        list-style-type: none;
+        justify-content: start;
+        align-content: center;
+        font-family: 'Raleway', sans-serif;
+        font-weight: 400;
+        font-size: 200%;
+        text-align: center;
+    }
+
+    .lessons_text ul li {
+        margin-top: 5%;
+        padding-right: 15%;
+    }
+
+
+
+
+
+
+
+
+
+    .lessons2 {
+        margin-top: 20vh;
+        margin-bottom: 15vh;
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: 100vh;
+        font-family: 'Raleway', sans-serif;
+        font-weight: 600;
+        font-size: 100%;
+        text-align: center;
+
+    }
+
+
+    .video {
+        height: 100%;
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: 15% 65% 20%;
+    }
+
+    .video__button {
+        width: 40%;
+        height: 60%;
+        font-size: 25px;
+        font-family: 'Raleway', sans-serif;
+        font-weight: 600;
+        background-color: #2FC97F;
+        border: none;
+        border-radius: 50px;
+        color: white;
+        justify-self: center;
+
+    }
+
+    .lessons2 h2 {
+        font-weight: 600;
+    }
+
+    .video__div {
+        width: 100%;
+    }
+
+    .video__video {
+        width: 40%;
+
+    }
+
+    .conspect_img {
+        width: 90%;
+    }
+
+    .teoria {
+        height: 100%;
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: 15% 85%;
+        background-image: url('../images/lessons/conspect_fon.png');
+        background-size: 107%;
+        background-repeat: no-repeat;
+        background-position-y: 0%;
+        background-position-x: -20%;
+    }
+
+    .teoria__container {
+        display: grid;
+        grid-template-columns: 20% 1fr 20%;
+        grid-row: 100%;
+
+    }
+
+    .button_left img,
+    .button_right img {
+        width: 40%;
+    }
+
+    .button_left img:hover,
+    .button_right img:hover {
+        width: 45%;
+    }
+
+    .button_left,
+    .button_right {
+        display: grid;
+        align-items: center;
+    }
+
+    .button_left {
+        padding-left: 30%;
+    }
+
+    .button_right {
+        padding-right: 30%;
+    }
+
+    .teoria__mobil {
+        display: none;
+    }
+
 }
-
-.lessons__h2 {
-    width:40vw;
-    margin-left: 30vw;
-    margin-bottom: 0;
-    padding-top: 1vh;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 600;
-    font-size: 55px;
-    color:white;
-    text-align: center;
-    background-color: #2FC97F;
-    border-radius: 50px;
-    color: white;
-
-}
-
-.lessons_img {
-    display: grid;
-    grid-column: 1/2;
-    grid-row: 2/3;
-    background-image: url(../images/lessons/lessons_fon.png);
-    background-repeat: no-repeat;
-    background-size: 82%;
-    background-position-x: 88%;
-    background-position-y: 83%;
-
-}
-
-.lessons_img img {
-    display: grid;
-    align-items: flex-start;
-    width: 55vw;
-    height: 62vh;
-    padding: 7%;
-    margin-left: 8%;
-    
-}
-
-.lessons_text {
-    display: grid;
-    grid-column: 2/3;
-    grid-row: 2/3;
-    text-decoration: none;
-    margin-top: 7%;
-    margin-left: 5vw;
-}
-
-.lessons_text ul {
-    display: grid;
-    list-style-type: none;
-    justify-content: start;
-    align-content: center;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 400;
-    font-size: 200%;
-    text-align: center;
-}
-.lessons_text ul li {
-    margin-top: 5%;
-    padding-right: 15%;
-}
-
-
-
-
-
-
-
-
-
-.lessons2 {
-    margin-top: 20vh;
-    margin-bottom: 15vh;
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 100vh;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 600;
-    font-size: 100%;
-    text-align: center;
-    
-}
-
-
-.video{
-    height: 100%;
-    display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: 15% 65% 20%;
-}
-
-.video__button{
-    width: 40%;
-    height: 60%;
-    font-size: 25px;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 600;
-    background-color: #2FC97F;
-    border: none;
-    border-radius: 50px;
-    color: white;
-    justify-self: center;
-
-}
-.lessons2 h2{
-    font-weight: 600;
-}
-
-.video__div{
-    width: 100%;
-}
-.video__video{
-    width: 40%;
-
-}
-.conspect_img{
-    width: 90%;
-}
-.teoria{
-    height: 100%;
-    display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: 15% 85%;
-    background-image: url('../images/lessons/conspect_fon.png');
-    background-size: 107%;
-    background-repeat: no-repeat;
-    background-position-y:0%;
-    background-position-x: -20%;
-}
-.teoria__container{
-    display: grid;
-    grid-template-columns: 20% 1fr 20%;
-    grid-row: 100%;
-   
-}
-.button_left img, .button_right img{
-    width: 40%;
-}
-.button_left img:hover, .button_right img:hover{
-    width: 45%;
-}
-.button_left, .button_right
-{
-    display: grid;
-    align-items: center;
-}
-.button_left{
-    padding-left: 30%;
-}
-.button_right{
-    padding-right: 30%;
-}
-}
-
-
 
 
 
 
 @media screen and (max-width: 600px) {
-    .lessons_img{
+    .lessons_img {
         display: none;
     }
-    .teoria{
+
+    .teoria {
+        display: none;
+    }
+
+    .teoria__mobil {
+        margin-bottom: 5vh;
         display: grid;
         grid-template-columns: 100%;
         grid-template-rows: 15% 85%;
         row-gap: 6vh;
         background-image: url('../images/lessons/conspect_fon.png');
-        background-size: 120%;
+        background-size: 115%;
         background-repeat: no-repeat;
-        background-position-y:40%;
-        background-position-x:20%;
-
-    
+        background-position-y: 160%;
+        background-position-x: 20%;
     }
-.teoria__container{
-    display: grid;
-    justify-content: center;
-}
 
-.teoria h2{
-    text-align: center;
+    .teoria__container {
+        display: grid;
+        justify-content: center;
+    }
 
-    padding-right: 5vw;
-}
-    .conspect_img{
+    .teoria h2 {
+        text-align: center;
+
+        padding-right: 5vw;
+    }
+
+    .carousel-control-prev-icon {
+        background-color: #2FC97F;
+        border-radius: 70%;
+    }
+
+    .carousel-control-next-icon {
+        background-color: #2FC97F;
+        border-radius: 70%;
+    }
+
+    .conspect_img {
         width: 70%;
-    margin-left: 12vw;
+        margin-left: 14vw;
     }
-    .button_left, .button_right{
+
+    .button_left,
+    .button_right {
         display: none;
     }
 
-    .video{
+    .video {
         display: grid;
         grid-template-columns: 100%;
         grid-template-rows: 15% 85%;
         row-gap: 6vh;
         justify-content: center;
     }
-    .video h2{
+
+    .video h2 {
         text-align: center;
 
     }
-    .video__button{
+
+    .video__button {
         display: none;
     }
-    .lessons__ul{
+
+    .lessons__ul {
         display: grid;
         padding-top: 2vh;
         padding-left: 0px;
         grid-template-columns: 90vw;
-        grid-template-rows: repeat(4,8vh);
+        grid-template-rows: repeat(4, 8vh);
         list-style-type: none;
         align-content: center;
         font-family: 'Raleway', sans-serif;
@@ -229,13 +266,14 @@
         font-size: 22px;
         text-align: center;
     }
+
     .lessons_text {
         display: grid;
         text-decoration: none;
 
     }
 
-    .lessons__h2{
+    .lessons__h2 {
         width: 75vw;
         height: 6vh;
         margin-left: 12vw;
@@ -250,21 +288,24 @@
         color: rgb(255, 255, 255);
         border-radius: 50px;
     }
-    .mob__container{
+
+    .mob__container {
         display: grid;
         padding-left: 5vw;
         padding-right: 5vw;
         padding-top: 5vh;
         grid-template-columns: 90vw;
         grid-template-rows: 100vh 35vh;
-}
-.lessons2{
-    grid-row: 1/2;
-    display: grid;
-    grid-template-rows: 30% 70%;
-    grid-template-columns: 100%;
-}
-.lessons{
-    grid-row: 2/3;
-}
+    }
+
+    .lessons2 {
+        grid-row: 1/2;
+        display: grid;
+        grid-template-rows: 30% 70%;
+        grid-template-columns: 100%;
+    }
+
+    .lessons {
+        grid-row: 2/3;
+    }
 }
